fixing footer on mobile

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,17 +1,13 @@
 .f-wrapper {
-  @apply w-screen flex justify-center items-center bg-gradient-to-tl from-purple-950 via-slate-950 to-violet-950 bottom-0 left-0 right-0 text-slate-300 py-20 mt-28 sm:mt-20;
-}
-
-.f-left> h1, .f-right> h1 {
-  @apply text-2xl sm:text-lg font-bold text-white mb-4;
-}
-
-.f-title {
-  @apply mb-10 text-center;
+  @apply w-screen flex justify-center items-center bg-gradient-to-tl from-purple-950 via-slate-950 to-violet-950 bottom-0 left-0 right-0 text-slate-300 py-20 sm:py-10 mt-28 sm:mt-20;
 }
 
 .flex-container {
-  @apply flex flex-row sm:flex-col gap-20 sm:text-center;
+  @apply flex flex-row sm:flex-col gap-20 sm:gap-5 sm:text-center;
+}
+
+.f-title {
+  @apply text-center mb-10 sm:mb-5;
 }
 
 .f-left{
@@ -20,4 +16,8 @@
 
 .f-right {
   @apply flex flex-col text-right sm:text-center;
+}
+
+.f-left> h1, .f-right> h1 {
+  @apply text-2xl sm:text-lg font-bold text-white mb-3;
 }
